cbits/Bullet.h

void btAxisSweep3Internal_unsignedshort__rayTest(void *c,float* p0,float* p1,void* p2,float* p3,float* p4); //method: rayTest void ( ::btAxisSweep3Internal<unsigned short>::* )( ::btVector3 const &,::btVector3 const &,::btBroadphaseRayCallback &,::btVector3 const &,::btVector3 const & ) 
void btAxisSweep3Internal_unsignedshort__setAabb(void *c,void* p0,float* p1,float* p2,void* p3); //method: setAabb void ( ::btAxisSweep3Internal<unsigned short>::* )( ::btBroadphaseProxy *,::btVector3 const &,::btVector3 const &,::btDispatcher * ) 
void btAxisSweep3Internal_unsignedshort__resetPool(void *c,void* p0); //method: resetPool void ( ::btAxisSweep3Internal<unsigned short>::* )( ::btDispatcher * ) 
int btAxisSweep3Internal_unsignedshort__testAabbOverlap(void *c,void* p0,void* p1); //method: testAabbOverlap bool ( ::btAxisSweep3Internal<unsigned short>::* )( ::btBroadphaseProxy *,::btBroadphaseProxy * ) 
void btAxisSweep3Internal_unsignedshort__getAabb(void *c,void* p0,float* p1,float* p2); //method: getAabb void ( ::btAxisSweep3Internal<unsigned short>::* )( ::btBroadphaseProxy *,::btVector3 &,::btVector3 & ) const
//not supported method: testOverlap2D bool ( ::btAxisSweep3Internal<unsigned short>::* )( ::btAxisSweep3Internal<unsigned short>::Handle const *,::btAxisSweep3Internal<unsigned short>::Handle const *,int,int ) 
// error:  - unsupported,  - unsupported, int - ok, int - ok, bool - ok

void btAxisSweep3Internal_unsignedshort__updateHandle(void *c,short unsigned int p0,float* p1,float* p2,void* p3); //method: updateHandle void ( ::btAxisSweep3Internal<unsigned short>::* )( short unsigned int,::btVector3 const &,::btVector3 const &,::btDispatcher * ) 
void btAxisSweep3Internal_unsignedshort__freeHandle(void *c,short unsigned int p0); //method: freeHandle void ( ::btAxisSweep3Internal<unsigned short>::* )( short unsigned int ) 
void btAxisSweep3Internal_unsignedshort__printStats(void *c); //method: printStats void ( ::btAxisSweep3Internal<unsigned short>::* )(  ) 
void* btAxisSweep3Internal_unsignedshort__createProxy(void *c,float* p0,float* p1,int p2,void* p3,short int p4,short int p5,void* p6,void* p7); //method: createProxy ::btBroadphaseProxy * ( ::btAxisSweep3Internal<unsigned short>::* )( ::btVector3 const &,::btVector3 const &,int,void *,short int,short int,::btDispatcher *,void * ) 
void btAxisSweep3Internal_unsignedshort__setOverlappingPairUserCallback(void *c,void* p0); //method: setOverlappingPairUserCallback void ( ::btAxisSweep3Internal<unsigned short>::* )( ::btOverlappingPairCallback * ) 
void btAxisSweep3Internal_unsignedshort__calculateOverlappingPairs(void *c,void* p0); //method: calculateOverlappingPairs void ( ::btAxisSweep3Internal<unsigned short>::* )( ::btDispatcher * ) 
void* btAxisSweep3Internal_unsignedshort__getOverlappingPairCache(void *c); //method: getOverlappingPairCache ::btOverlappingPairCache * ( ::btAxisSweep3Internal<unsigned short>::* )(  ) 
void* btAxisSweep3Internal_unsignedshort__getOverlappingPairCache0(void *c); //method: getOverlappingPairCache ::btOverlappingPairCache * ( ::btAxisSweep3Internal<unsigned short>::* )(  ) 
void* btAxisSweep3Internal_unsignedshort__getOverlappingPairCache1(void *c); //method: getOverlappingPairCache ::btOverlappingPairCache const * ( ::btAxisSweep3Internal<unsigned short>::* )(  ) const
void btAxisSweep3Internal_unsignedshort__unQuantize(void *c,void* p0,float* p1,float* p2); //method: unQuantize void ( ::btAxisSweep3Internal<unsigned short>::* )( ::btBroadphaseProxy *,::btVector3 &,::btVector3 & ) const