Physics/Bullet/Raw/BulletCollision/BroadphaseCollision.chs

{#fun btAxisSweep3Internal_unsignedshort__rayTest as btAxisSweep3Internal_unsignedshort__rayTest'    `( BtAxisSweep3Internal_unsignedshort_Class bc , BtBroadphaseRayCallbackClass p2 )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ rayFrom
, allocaVec3-  `Vec3'  peekVec3* -- ^ rayTo
, withBt* `p2'  -- ^ rayCallback
, allocaVec3-  `Vec3'  peekVec3* -- ^ aabbMin
, allocaVec3-  `Vec3'  peekVec3* -- ^ aabbMax
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#258>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedshort__setAabb as btAxisSweep3Internal_unsignedshort__setAabb    `( BtAxisSweep3Internal_unsignedshort_Class bc , BtBroadphaseProxyClass p0 , BtDispatcherClass p3 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ proxy
, withVec3* `Vec3'  peekVec3* -- ^ aabbMin
, withVec3* `Vec3'  peekVec3* -- ^ aabbMax
, withBt* `p3'  -- ^ dispatcher
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#258>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedshort__setAabb as btAxisSweep3Internal_unsignedshort__setAabb'    `( BtAxisSweep3Internal_unsignedshort_Class bc , BtBroadphaseProxyClass p0 , BtDispatcherClass p3 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ proxy
, allocaVec3-  `Vec3'  peekVec3* -- ^ aabbMin
, allocaVec3-  `Vec3'  peekVec3* -- ^ aabbMax
, withBt* `p3'  -- ^ dispatcher
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#618>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedshort__resetPool as btAxisSweep3Internal_unsignedshort__resetPool    `( BtAxisSweep3Internal_unsignedshort_Class bc , BtDispatcherClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ dispatcher
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#722>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedshort__testAabbOverlap as btAxisSweep3Internal_unsignedshort__testAabbOverlap    `( BtAxisSweep3Internal_unsignedshort_Class bc , BtBroadphaseProxyClass p0 , BtBroadphaseProxyClass p1 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ proxy0
, withBt* `p1'  -- ^ proxy1
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#318>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedshort__getAabb as btAxisSweep3Internal_unsignedshort__getAabb    `( BtAxisSweep3Internal_unsignedshort_Class bc , BtBroadphaseProxyClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ proxy
, withVec3* `Vec3'  peekVec3* -- ^ aabbMin
, withVec3* `Vec3'  peekVec3* -- ^ aabbMax
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#318>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedshort__getAabb as btAxisSweep3Internal_unsignedshort__getAabb'    `( BtAxisSweep3Internal_unsignedshort_Class bc , BtBroadphaseProxyClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ proxy
, allocaVec3-  `Vec3'  peekVec3* -- ^ aabbMin
, allocaVec3-  `Vec3'  peekVec3* -- ^ aabbMax
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#756>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedshort__updateHandle as btAxisSweep3Internal_unsignedshort__updateHandle    `( BtAxisSweep3Internal_unsignedshort_Class bc , BtDispatcherClass p3 )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ handle
, withVec3* `Vec3'  peekVec3* -- ^ aabbMin
, withVec3* `Vec3'  peekVec3* -- ^ aabbMax
, withBt* `p3'  -- ^ dispatcher
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#756>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedshort__updateHandle as btAxisSweep3Internal_unsignedshort__updateHandle'    `( BtAxisSweep3Internal_unsignedshort_Class bc , BtDispatcherClass p3 )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ handle
, allocaVec3-  `Vec3'  peekVec3* -- ^ aabbMin
, allocaVec3-  `Vec3'  peekVec3* -- ^ aabbMax
, withBt* `p3'  -- ^ dispatcher
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#493>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedshort__freeHandle as btAxisSweep3Internal_unsignedshort__freeHandle    `( BtAxisSweep3Internal_unsignedshort_Class bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ handle
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#188>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedshort__printStats as btAxisSweep3Internal_unsignedshort__printStats    `( BtAxisSweep3Internal_unsignedshort_Class bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#231>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedshort__createProxy as btAxisSweep3Internal_unsignedshort__createProxy    `( BtAxisSweep3Internal_unsignedshort_Class bc , BtDispatcherClass p6 )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ aabbMin
, withVec3* `Vec3'  peekVec3* -- ^ aabbMax
,  `Int'  -- ^ shapeType
, withVoidPtr* `VoidPtr'  -- ^ userPtr
,  `Int'  -- ^ collisionFilterGroup
,  `Int'  -- ^ collisionFilterMask
, withBt* `p6'  -- ^ dispatcher
, withVoidPtr* `VoidPtr'  -- ^ multiSapProxy
 } ->  `BtBroadphaseProxy'  mkBtBroadphaseProxy* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#231>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedshort__createProxy as btAxisSweep3Internal_unsignedshort__createProxy'    `( BtAxisSweep3Internal_unsignedshort_Class bc , BtDispatcherClass p6 )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ aabbMin
, allocaVec3-  `Vec3'  peekVec3* -- ^ aabbMax
,  `Int'  -- ^ shapeType
, withVoidPtr* `VoidPtr'  -- ^ userPtr
,  `Int'  -- ^ collisionFilterGroup
,  `Int'  -- ^ collisionFilterMask
, withBt* `p6'  -- ^ dispatcher
, withVoidPtr* `VoidPtr'  -- ^ multiSapProxy
 } ->  `BtBroadphaseProxy'  mkBtBroadphaseProxy* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#171>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedshort__setOverlappingPairUserCallback as btAxisSweep3Internal_unsignedshort__setOverlappingPairUserCallback    `( BtAxisSweep3Internal_unsignedshort_Class bc , BtOverlappingPairCallbackClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ pairCallback
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#636>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedshort__calculateOverlappingPairs as btAxisSweep3Internal_unsignedshort__calculateOverlappingPairs    `( BtAxisSweep3Internal_unsignedshort_Class bc , BtDispatcherClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ dispatcher
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#162>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedshort__getOverlappingPairCache0 as btAxisSweep3Internal_unsignedshort__getOverlappingPairCache    `( BtAxisSweep3Internal_unsignedshort_Class bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `BtOverlappingPairCache'  mkBtOverlappingPairCache* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#162>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedshort__getOverlappingPairCache0 as btAxisSweep3Internal_unsignedshort__getOverlappingPairCache0    `( BtAxisSweep3Internal_unsignedshort_Class bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `BtOverlappingPairCache'  mkBtOverlappingPairCache* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#166>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedshort__getOverlappingPairCache1 as btAxisSweep3Internal_unsignedshort__getOverlappingPairCache1    `( BtAxisSweep3Internal_unsignedshort_Class bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `BtOverlappingPairCache'  mkBtOverlappingPairCache* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#327>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedshort__unQuantize as btAxisSweep3Internal_unsignedshort__unQuantize    `( BtAxisSweep3Internal_unsignedshort_Class bc , BtBroadphaseProxyClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ proxy
, withVec3* `Vec3'  peekVec3* -- ^ aabbMin
, withVec3* `Vec3'  peekVec3* -- ^ aabbMax
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#327>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedshort__unQuantize as btAxisSweep3Internal_unsignedshort__unQuantize'    `( BtAxisSweep3Internal_unsignedshort_Class bc , BtBroadphaseProxyClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ proxy
, allocaVec3-  `Vec3'  peekVec3* -- ^ aabbMin
, allocaVec3-  `Vec3'  peekVec3* -- ^ aabbMax
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#807>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
